KTS-3582 "Search field in search portlet is incorrectly aligned" Fixed. Modified relevant CSS.
Committed By: Philip Arkcoll
Reviewed By:

git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@9039 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -2246,7 +2246,7 @@ body #content #add_dashlet
 .x-toolbar{
     border: none;
     display: block;
-	padding: 2px;
+	padding: 0 0 0 15px;
     background: transparent;
     position: relative;
     zoom: 1;
